include/pinc.h


PINC_API void PINC_CALL pinc_incomplete_init(void);
PINC_API int PINC_CALL pinc_window_backend_is_supported(int backend);
PINC_API void PINC_CALL pinc_init_set_window_backend(int backend);
PINC_API int PINC_CALL pinc_graphics_backend_is_supported(int backend);
PINC_API void PINC_CALL pinc_init_set_graphics_backend(int backend);
PINC_API int PINC_CALL pinc_framebuffer_format_get_num(void);
PINC_API int PINC_CALL pinc_framebuffer_format_get_channels(int framebuffer_index);
PINC_API int PINC_CALL pinc_framebuffer_format_get_bit_depth(int framebuffer_index, int channel);
PINC_API int PINC_CALL pinc_framebuffer_format_get_depth_buffer(int framebuffer_index);
PINC_API void PINC_CALL pinc_init_set_framebuffer_format(int framebuffer_index);
PINC_API void PINC_CALL pinc_complete_init(void);
PINC_API void PINC_CALL pinc_deinit(void);
PINC_API int PINC_CALL pinc_error_get_num(void);
PINC_API int PINC_CALL pinc_error_peek_type(void);
PINC_API int PINC_CALL pinc_error_peek_fatal(void);
PINC_API int PINC_CALL pinc_error_peek_message_length(void);
PINC_API char PINC_CALL pinc_error_peek_message_byte(int index);
PINC_API void PINC_CALL pinc_error_pop(void);
PINC_API int PINC_CALL pinc_window_backend_get(void);
PINC_API int PINC_CALL pinc_object_get_type(int id);
PINC_API int PINC_CALL pinc_object_get_complete(int id);
PINC_API int PINC_CALL pinc_window_incomplete_create(void);
PINC_API void PINC_CALL pinc_window_complete(int window);
PINC_API void PINC_CALL pinc_window_set_title_length(int window, int len);
PINC_API void PINC_CALL pinc_window_set_title_item(int window, int index, char item);
PINC_API int PINC_CALL pinc_window_get_title_length(int window);
PINC_API char PINC_CALL pinc_window_get_title_item(int window, int index);
PINC_API void PINC_CALL pinc_window_set_width(int window, int width);
PINC_API int PINC_CALL pinc_window_get_width(int window);
PINC_API int PINC_CALL pinc_window_has_width(int window);
PINC_API void PINC_CALL pinc_window_set_height(int window, int height);
PINC_API int PINC_CALL pinc_window_get_height(int window);
PINC_API int PINC_CALL pinc_window_has_height(int window);
float pinc_window_get_scale_factor(int window);
PINC_API int PINC_CALL pinc_window_has_scale_factor(int window);
PINC_API void PINC_CALL pinc_window_set_resizable(int window, int resizable);
PINC_API int PINC_CALL pinc_window_get_resizable(int window);
PINC_API void PINC_CALL pinc_window_set_minimized(int window, int minimized);
PINC_API int PINC_CALL pinc_window_get_minimized(int window);
PINC_API void PINC_CALL pinc_window_set_maximized(int window, int maximized);
PINC_API int PINC_CALL pinc_window_get_maximized(int window);
PINC_API void PINC_CALL pinc_window_set_fullscreen(int window, int fullscreen);
PINC_API int PINC_CALL pinc_window_get_fullscreen(int window);
PINC_API void PINC_CALL pinc_window_set_focused(int window, int focused);
PINC_API int PINC_CALL pinc_window_get_focused(int window);
PINC_API void PINC_CALL pinc_window_set_hidden(int window, int hidden);
PINC_API int PINC_CALL pinc_window_get_hidden(int window);
PINC_API void PINC_CALL pinc_window_present_framebuffer(int window, int vsync);
PINC_API int PINC_CALL pinc_mouse_button_get(int button);
PINC_API int PINC_CALL pinc_keyboard_key_get(int button);
PINC_API int PINC_CALL pinc_get_cursor_x(void);
PINC_API int PINC_CALL pinc_get_cursor_y(void);
PINC_API void PINC_CALL pinc_step(void);
PINC_API int PINC_CALL pinc_event_window_closed(int window);
PINC_API int PINC_CALL pinc_event_window_mouse_button(int window);
PINC_API int PINC_CALL pinc_event_window_resized(int window);
PINC_API int PINC_CALL pinc_event_window_focused(int window);
PINC_API int PINC_CALL pinc_event_window_unfocused(int window);
PINC_API int PINC_CALL pinc_event_window_exposed(int window);
PINC_API int PINC_CALL pinc_event_window_keyboard_button_num(int window);
PINC_API int PINC_CALL pinc_event_window_keyboard_button_get(int window, int index);
PINC_API int PINC_CALL pinc_event_window_keyboard_button_get_repeat(int window, int index);
PINC_API int PINC_CALL pinc_event_window_cursor_move(int window);
PINC_API int PINC_CALL pinc_event_window_cursor_exit(int window);
PINC_API int PINC_CALL pinc_event_window_cursor_enter(int window);