include/pinc_graphics.h


PINC_API void PINC_CALL pinc_graphics_fill_color(int window, float c1, float c2, float c3, float c4);
PINC_API void PINC_CALL pinc_graphics_fill_depth(int window, float depth);